--- a/curs-fazt/package.json
+++ b/curs-fazt/package.json
@@ -11,13 +11,11 @@
   },
   "dependencies": {
     "@astrojs/react": "^3.0.2",
-    "@astrojs/tailwind": "^5.0.0",
     "@types/react": "^18.2.24",
     "@types/react-dom": "^18.2.8",
     "astro": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-toastify": "^9.1.3",
-    "tailwindcss": "^3.3.3"
+    "react-toastify": "^9.1.3"
   }
 }
